<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.StartActivity">

    <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/add_contact_icon_white"
        android:orderInCategory="2"
        android:title="@string/action_addContact"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_search_contacts"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_faqAndHelp"
        android:orderInCategory="100"
        android:title="@string/action_faqAndHelp"
        app:showAsAction="never" />
</menu>
