<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.module1.triplak.moduleone.activity.SendRequest"
    tools:showIn="@layout/activity_send_request">

    <EditText
        android:id="@+id/etRequestInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_input_rectangle"
        android:padding="8dp"
        android:text="@string/request_info"
        android:textColor="@color/TextColor" />

    <TextView
        android:id="@+id/tvRequestWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRequestInfo"
        android:layout_marginTop="8dp"
        android:text="@string/requestWarning"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/requestLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRequestWarning"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRequestBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttonborder"
            android:text="@string/backButton"
            android:textColor="@color/TextOnButtonColor" />

        <Button
            android:id="@+id/btnRequestSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonborder"
            android:text="@string/Send"
            android:textColor="@color/TextOnButtonColor" />
    </LinearLayout>

</RelativeLayout>
