<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.StartActivity"
    tools:showIn="@layout/activity_start">

    <LinearLayout
        android:id="@+id/phoneLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_input_rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPhoneCode"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button_embedded"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/defaultPhoneCode"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/TextColor" />

        <View
            android:id="@+id/line"
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/Silver" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/embedded"
            android:hint="@string/enter_phone_number_hint"
            android:inputType="phone"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="9538753190"
            android:textColor="@color/TextColor"
            android:textColorHint="@color/TextHintColor"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneLinearLayout"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_input_rectangle"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnPasswordVisible"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button_embedded"
            android:contentDescription="@string/passwordVisibleDescription"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_view" />

        <View
            android:id="@+id/lineSeparator"
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/Silver" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/embedded"
            android:fontFamily="sans-serif"
            android:hint="@string/passwordDescription"
            android:inputType="textPassword"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="peekaboo"
            android:textColor="@color/TextColor"
            android:textColorHint="@color/TextHintColor"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/passwordDescription"
        android:src="@drawable/icon_triplac" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/buttonborder"
        android:text="@string/SignInButton"
        android:textAllCaps="false"
        android:textColor="@color/TextOnButtonColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/EnterPhoneNumber"
        android:textColor="@color/TextColor" />

    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:linksClickable="true"
        android:text="@string/privacy_Policy"
        android:textColor="@color/TextColor" />

    <TextView
        android:id="@+id/tvAuthentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tvPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/tvAuthentication"
        android:textColor="@color/LinkColor" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/ForgotPassword"
        android:textColor="@color/LinkColor" />
</RelativeLayout>
