<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.module1.triplak.moduleone.activity.VerifyLoginOTP"
    tools:showIn="@layout/activity_verify_login_otp">

    <TextView
        android:id="@+id/tvLoginOTPVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/LoginOTPVerify"
        android:textColor="@color/TextColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etLoginOTP"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginOTPVerify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/otp_hint"
        android:inputType="number"
        android:textColor="@color/TextColor"
        android:textColorHint="@color/TextHintColor" />

    <Button
        android:id="@+id/btnVerifyLoginOTP"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginOTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonborder"
        android:text="@string/otp_submit"
        android:textAllCaps="false"
        android:textColor="@color/TextOnButtonColor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textColor="@color/TextColor"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
