<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.module1.triplak.moduleone.activity.ForgotPassword"
    tools:showIn="@layout/activity_forgot_password">

    <TextView
        android:id="@+id/tvforgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPasswordInfo"
        android:textColor="@color/TextColor"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvforgotPassword"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/forgotEmailLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/forgotPasswordEmail"
            android:textColor="@color/TextColor" />

        <RadioButton
            android:id="@+id/forgotMobileLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/forgotEmailLink"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/forgotPasswordPhone"
            android:textColor="@color/TextColor" />
    </RadioGroup>

    <Button
        android:id="@+id/btnforgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/buttonborder"
        android:onClick="doSomething"
        android:text="@string/Send"
        android:textAllCaps="false"
        android:textColor="@color/TextOnButtonColor"
        android:textSize="20sp" />

</RelativeLayout>
