<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.module1.triplak.moduleone.activity.InitiateCodeVerification"
    tools:showIn="@layout/activity_initiate_code_verification">

    <TextView
        android:id="@+id/tvInfoToUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/activation_code"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:text="@string/ActivationCodeInfo"
        android:textColor="@color/TextColor"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etActivationCode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:background="@drawable/text_input_rectangle"
        android:gravity="center"
        android:hint="@string/activation_code"
        android:inputType="text"
        android:text="rooting"
        android:textColor="@color/TextColor"
        android:textColorHint="@color/TextHintColor" />

    <Button
        android:id="@+id/btnCheckCode"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etActivationCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/buttonborder"
        android:onClick="userCheckAuthorisation"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:text="@string/btn_CodeCheck"
        android:textAllCaps="false"
        android:textColor="@color/TextOnButtonColor"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textColor="@color/TextColor"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>
